Fix Java 11 compatibility: use collect(Collectors.toList()) instead of toList()
Co-Authored-By: mason.batchelor@cognition.ai <masonbatchelor81@gmail.com>